deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-inno
  labels:
    app: api-gateway-inno
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway-inno
  template:
    metadata:
      labels:
        app: api-gateway-inno
    spec:
      containers:
        - name: api-gateway-inno
          image: direwait/apigateway-inno:latest
          ports:
            - containerPort: 8888
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8888
            initialDelaySeconds: 50
            periodSeconds: 10
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8888
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 3
