service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-inno
spec:
  type: LoadBalancer
  selector:
    app: api-gateway-inno
  ports:
    - port: 8888
      targetPort: 8888
